# ghost-writer-mcp

./: .gitignore  README.md  config.example.yaml  pyproject.toml  smithery.yaml
ghost_writer_mcp/: __main__.py  cli.py  config.py  llm_client.py  server.py
ghost_writer_mcp/content/: abstractor.py  classifier.py  generator.py
ghost_writer_mcp/content/prompts/: classifier.md
ghost_writer_mcp/scanner/: activity.py  aggregator.py  github_client.py  local_git.py
ghost_writer_mcp/store/: blocklist.py
src/: __main__.py  cli.py  llm_client.py  server.py
src/content/: abstractor.py  classifier.py  generator.py
src/content/prompts/: generator.md  reviewer.md
src/scanner/: aggregator.py  github_client.py  local_git.py
src/store/: blocklist.py  database.py
tests/: conftest.py  test_aggregator.py  test_blocklist.py  test_classifier.py  test_config.py  test_config_env.py  test_database.py  test_generator.py  test_llm_client.py  test_scanner.py  test_server.py
