[project]
name = "ghost-writer-mcp"
version = "0.2.0"
description = "MCP server that turns GitHub activity into LinkedIn thought leadership"
license = {text = "MIT"}
keywords = ["mcp", "linkedin", "github", "ai", "llm", "content-generation"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "PyGithub>=2.0",
    "openai>=1.0",
    "anthropic>=0.42",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/fabdendev/ghost-writer-mcp"
Repository = "https://github.com/fabdendev/ghost-writer-mcp"
Issues = "https://github.com/fabdendev/ghost-writer-mcp/issues"

[project.scripts]
ghost-writer-mcp = "ghost_writer_mcp.server:main"

[project.optional-dependencies]
dev = ["pytest>=9.0", "ruff>=0.14"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ghost_writer_mcp"]

[tool.pytest.ini_options]
pythonpath = ["."]
